fix note position and scroll textarea on mobile note

--- a/css/main.css
+++ b/css/main.css
@@ -307,6 +307,7 @@
 
     .formContainer textarea, .formContainer textarea:focus {
         font-size: 18px;
+        overflow: scroll;
     }
 
     .header {
@@ -337,13 +338,10 @@
         border-radius: 0px;
         height: 100vh;
         left: 0;
+        position: fixed;
         top: 0;
         width: 100%;
         z-index: 1000;
-    }
-
-    .note-content {
-        height: 100%;
     }
 
     .note .footer {
